--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
-          tags: scumbug/tableboptop:latest
+          tags: scumbug/mirrorbot:latest
           push: ${{ github.ref == 'refs/heads/master' }}
           
       - name: Image digest
